    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
        android:orientation="vertical"  >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/width"
           tools:context=".MainActivity" />

       <EditText
           android:id="@+id/editWidth"
           android:layout_width="0dip"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:inputType="number"
           android:hint="@string/value" >

           <requestFocus />
       </EditText>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/URL"
            tools:context=".MainActivity" />

        <EditText
            android:id="@+id/EditURL"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/exampleurl" />

    </LinearLayout>

    <Button
        android:id="@+id/verQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view" />

    </LinearLayout>


